# rendering

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md  readme.txt  rendering.sln
App/: app.cpp
Defs/: Defs.h
Engine/renderers/: PBR.h  Phong.cpp  Phong_Shadow.h
Engine/shaders/: phong.vertex  skybox.pixel  specular_prefiltering_convolution.pixel
Engine_/: Engine.cpp  Engine.h
Engine_/renderers/: Skybox.cpp
Engine_/shaders/: phong_shadow.pixel  skybox.vertex
GL/: glgpu.cpp  glgpu.h
IO/: Input.cpp  Input.h  STL_Reader.h
Res/stls/: bunny.stl  floor.stl
Res_/stls/: cylinder.stl  sphere.stl
app/: App.cpp  App.h  Painter.cpp  Painter.h  app.cpp
defs/: Defs.h
engine/: Engine.cpp  Engine.h
engine/renderer/: CQuad.cpp  CQuad.h  Colored.cpp  Colored.h  Edge.cpp  Edge.h  Hiddenline.cpp  Line.cpp  Line.h  PBR.cpp  PBR.h  Phong.cpp  Phong.h  Phong_Shadow.cpp  Point.cpp  Point.h  Quad.cpp  Quad.h  Skybox.cpp  Skybox.h  TQuad.cpp  TQuad.h
engine/renderers/: Colored.cpp  Colored.h  PBR.cpp  PBR.h  PBR_Renderer.cpp  PBR_Renderer.h  Phong.cpp  Phong.h  Phong_Renderer.cpp  Phong_Renderer.h  Phong_Shadow.cpp  Phong_Shadow_Renderer.cpp  Phong_Shadow_Renderer.h  Skybox.cpp  Skybox.h  Skybox_Renderer.cpp  Skybox_Renderer.h
engine/shaders/: colored.pixel  cquad.pixel  cquad.vertex  cube.vertex  depth.pixel  depth.vertex  diffuse_irradiance_convolution.pixel  edge.geo  edge.pixel  edge.vertex  equarectangular_to_cubemap.pixel  hiddenline.geo  hiddenline.pixel  pbr.pixel  pbr.vertex  phong.pixel  phong.vertex  point.pixel  point.vertex  quad_ndc.vertex  skybox.pixel  skybox.vertex  specular_BRDF_convolution.pixel  specular_prefiltering_convolution.pixel  tquad.pixel
geometry/: Mesh.cpp  Mesh.h
gl/: gl_context.cpp  gl_context.h  glew.c  glgpu.cpp  glgpu.h
gpu_gl/: gl_context.cpp  gl_context.h  glgpu.cpp  glgpu.h
gui/: NativeWindow.cpp  NativeWindow.h  OpenglPalette.cpp  OpenglPalette.h  Palette.cpp  Palette.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/ui/: MainWindow.ui  ui.qrc
imgui/: imgui.h
io/: Event.h  Image.cpp  Image.h  Input.cpp  Input.h  STL_Reader.cpp  STL_Reader.h
main/: main.cpp
main_/: main.cpp
math/: Gfx.h  Matrix.h  Quaternion.h  Vector.h
rendering/: Defs.h  main.cpp  rendering.vcxproj  rendering.vcxproj.filters
rendering/IO/: Image.cpp  Image.h  Input.cpp  Input.h  STL_Reader.cpp
rendering/app/: app.cpp  app.h
rendering/backend/: backend.cpp  backend.h
rendering/callbacks/: callbacks.cpp  callbacks.h
rendering/engine/: Engine.cpp  Engine.h  Mesh_Renderer.cpp  Mesh_Renderer.h
rendering/engine/renderers/: Depth_Offline_Renderer.cpp  Depth_Offline_Renderer.h  PBR_Renderer.cpp  PBR_Renderer.h  Phong_Renderer.cpp  Phong_Renderer.h  Phong_Shadow_Renderer.cpp  Skybox_Renderer.cpp  Skybox_Renderer.h
rendering/engine/shaders/: colored.pixel  colored.vertex  cube.vertex  depth.pixel  depth.vertex  diffuse_irradiance_convolution.pixel  equarectangular_to_cubemap.pixel  equarectangular_to_cubemap.vertex  pbr.pixel  pbr.vertex  phong.pixel  phong.vertex  phong_shadow.pixel  phong_shadow.vertex  quad_ndc.vertex  skybox.pixel  skybox.vertex  specular_prefiltering_convolution.pixel  texture.pixel  texture.vertex
rendering/geometry/: Mesh.cpp  Mesh.h  vertex.h
rendering/gpu_gl/: gl_context.cpp  gl_context.h  glgpu.cpp  glgpu.h
rendering/math/: Gfx.h  Matrix.h  Quaternion.h  Transform.h  Vector.h
rendering/res/stls/: cube1.stl
rendering/stls/: cube.stl
rendering/window/: window.cpp  window.h
rendering/world/: 3Dobject.h  Camera.h  World.cpp  World.h
src/app/: Painter.cpp  Painter.h
src/defs/: Defs.h
src/engine/: Engine.cpp  Engine.h
src/engine/renderer/: CQuad.cpp  CQuad.h  Colored.cpp  Colored.h  Edge.cpp  Edge.h  Hiddenline.cpp  Hiddenline.h  Line.cpp  Line.h  PBR.cpp  PBR.h  Pass.h  Phong.cpp  Phong.h  Phong_Shadow.cpp  Phong_Shadow.h  Point.cpp  Postprocessor.cpp  Postprocessor.h  Skybox.cpp  TQuad.cpp  TQuad.h
src/engine/shaders/: colored.pixel  colored.vertex  depth.pixel  edge.pixel  line.vertex  pbr.pixel  pbr.vertex  tquad.pixel  tquad.vertex
src/engine/shaders/postprocessing/: color.pixel
src/gl/: Uniform.h  glgpu.cpp  glgpu.h
src/gui/: Palette.cpp
src/gui/ui/: MainWindow.ui  ui.qrc
src/imgui/: imgui.cpp  imgui_demo.cpp
src/infra/managers/: Selector.h
src/infra/mem/: chunck.h
src/io/: Event.h  Image.cpp  Image.h  Input.cpp  Input.h  STL_Reader.cpp  STL_Reader.h
src/main/: main.cpp
src/math/: Euler_Angles.h  Gfx.h  Matrix.h  Quaternion.h  Vector.h
src/window/: Window.cpp
src/world/: Universe.cpp  Universe.h
src/world/component/: Camera.h  Flash.h  Lamp.h  Material.h  Mesh.h  Sun.h  Transform.h  Vertex.h
src/world/system/querying/: Pick.cpp  Pick.h
src/world/system/rendering/: Colored.cpp  Colored.h  Hiddenline.cpp  Hiddenline.h  Line.cpp  PBR.cpp  PBR.h  Phong.h  Point.cpp  Point.h  Postprocessor.cpp  Postprocessor.h
src/world/system/scripting/: Script.cpp  Script.h
src/world/system/updating/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h
utils/: Defer.h
window/: Window.cpp  Window.h  window.cpp  window.h
world/: 3Dobject.h  Camera.h  ECS_World.cpp  ECS_World.h  Universe.cpp  Universe.h  World.cpp
world/component/: Camera.h  Input_Handle.h  Mesh.h  Vertex.h
world/components/: Camera.h  Material.h  Mesh.h  Transform.h
world/system/querying/: Pick.cpp  Pick.h
world/system/rendering/: Background.cpp  Background.h  Colored.cpp  Colored.h  Edge.cpp  Edge.h  Hiddenline.cpp  Hiddenline.h  Line.cpp  Line.h  Outlines3D.cpp  Outlines3D.h  PBR.cpp  PBR.h  Phong.cpp  Phong.h  Point.cpp  Point.h  Skybox.cpp  Skybox.h
world/system/retrieving/: Pick.cpp  Pick.h
world/system/scripting/: Script.cpp  Script.h
world/system/updating/: Camera.cpp  Camera.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  Viewport.cpp  Viewport.h
